--- a/zipkin-query-service/build.gradle
+++ b/zipkin-query-service/build.gradle
@@ -25,6 +25,7 @@ dependencies {
     compile project(':zipkin-cassandra')
     compile project(':zipkin-redis')
     compile project(':zipkin-anormdb')
+    compile project(':zipkin-elastic')
     compile anormDriverDependencies["mysql"] // for query-mysql
 }
 
