--- a/zipkin-web/build.gradle
+++ b/zipkin-web/build.gradle
@@ -4,7 +4,7 @@ ext.mainClassName = 'com.twitter.zipkin.web.Main'
 task run(type:JavaExec) {
     main = mainClassName
     classpath = sourceSets.main.runtimeClasspath
-    args "-zipkin.web.resourcesRoot=${projectDir}/src/main/resources"
+    args "-zipkin.web.resourcesRoot=${projectDir}/src/main/resources", "-zipkin.web.port=:8888"
     workingDir project.buildDir
 }
 
