--- a/zipkin-query-service/debian/rules
+++ b/zipkin-query-service/debian/rules
@@ -4,7 +4,8 @@
 	dh $@
 
 override_dh_auto_build:
-	../gradlew --project-cache-dir ../gradle-cache/ :zipkin-query-service:build
+	mkdir -p ../gradle-build-cache
+	../gradlew -g ../gradle-build-cache/ --project-cache-dir ../gradle-build-cache/ :zipkin-query-service:build
 
 override_dh_auto_install:
 	mkdir -p debian/zipkin-query-service/usr/share/zipkin-query-service/lib
