--- a/zipkin-query-service/debian/control
+++ b/zipkin-query-service/debian/control
@@ -2,8 +2,7 @@ Source: zipkin-query-service
 Section: java
 Priority: optional
 Maintainer: Anton Matveenko <antmat@me.com>
-Build-Depends: debhelper (>= 9),
-               javahelper
+Build-Depends: debhelper (>= 9)
 Standards-Version: 3.9.6
 Vcs-Git: https://github.com/antmat/zipkin.git 
 Vcs-Browser: https://github.com/antmat/zipkin
